# sample-agentic-engineering-framework

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  search-index.json  styles.css  tailwind.config.js
adopt/: by-team-size.html  customization.html  getting-started.html  maturity-path.html
agent-samples/: README.md
agentic-layer/: commands-skills.html  prompt-templates.html  quality-gates.html  tool-integrations.html  (+1 more)
automated-kiro/agentic-layer/: pyproject.toml  run.py
automated-kiro/agentic-layer/engine/: __init__.py  config.py  gate.py  git.py  github.py  manifest.py  monitor.py  runner.py  types.py  utils.py  worktree.py
automated-kiro/agentic-layer/examples/kiro/: README.md  workflow.yaml
automated-kiro/agentic-layer/examples/kiro/kiro-layer/agents/: builder.md  codebase-analyzer.md  codebase-locator.md  pattern-finder.md  tester.md
automated-kiro/agentic-layer/examples/kiro/kiro-layer/gates/: deploy-readiness.yaml  review-severity.yaml  test-pass.yaml
automated-kiro/agentic-layer/examples/kiro/kiro-layer/prompts/: branch-name.md  build.md  classify.md  deploy.md  document.md  plan-bug.md  plan-chore.md  plan-feature.md  plan-local.md  plan-patch.md  resolve-test.md  review.md  test.md
automated-kiro/agentic-layer/examples/kiro/kiro-layer/tools/: permissions.yaml
automated-kiro/agentic-layer/runners/: __init__.py
automated-kiro/agentic-layer/runners/kiro/: __init__.py  agent.py  agent_loader.py  kiro_runner.py  subagent.py
automated-kiro/agentic-layer/triggers/: __init__.py  api.py  cron.py  webhook.py
(+113 files in other folders)
