[project]
name = "aef-reference"
version = "0.1.0"
description = "AEF Reference Implementation -- Agentic Development Workflow Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "triggers", "runners"]

[tool.pytest.ini_options]
testpaths = ["tests"]
